# aurelia

./: README.md  package.json  pnpm-lock.yaml  tsconfig.json
aurelia/synthesis/: synthethize.js
aurelia/vision/: analyze-image.js  analyze-image.py
data/: data.db
migrations/2023-11-19-180041_create_alarms/: down.sql  up.sql
migrations/2023-11-19-180054_create_reminders/: up.sql
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  evaluate_prompt.rs  main.rs  models.rs  read_json.rs  schema.rs
src/lib/aurelia/synthesis/: SpeechSynthesis.cjs
src/lib/components/: Alarm.svelte  Footer.svelte  Header.svelte  Prompt.svelte  Settings.svelte  Talk.svelte  Voice.svelte
