[package]
name = "aurelia"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2.1.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
libsqlite3-sys = { version = "0.25.2", features = ["bundled"] }
chrono = { version = "0.4.26", default-features = false, features = [
    "clock",
    "std",
] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
serde_json = "1.0"
rodio = "0.17.3"
regex = "1.10.2"
screenshots = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
